crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__add_future_annotation_UP037_1.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP037 [*] Remove quotes from type annotation
  --> UP037_1.py:9:8
   |
 7 | def foo():
 8 |     # UP037
 9 |     x: "Tuple[int, int]" = (0, 0)
   |        ^^^^^^^^^^^^^^^^^
10 |     print(x)
   |
help: Remove quotes
  |
9 -     x: "Tuple[int, int]" = (0, 0)
9 +     x: Tuple[int, int] = (0, 0)
  |

UP037 [*] Remove quotes from type annotation
  --> UP037_1.py:14:4
   |
13 | # OK
14 | X: "Tuple[int, int]" = (0, 0)
   |    ^^^^^^^^^^^^^^^^^
help: Remove quotes
   |
14 - X: "Tuple[int, int]" = (0, 0)
14 + X: Tuple[int, int] = (0, 0)
   |
