crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__add_future_annotation_UP037_2.pyi.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP037 [*] Remove quotes from type annotation
 --> UP037_2.pyi:3:14
  |
1 | # https://github.com/astral-sh/ruff/issues/7102
2 |
3 | def f(a: Foo['SingleLine  # Comment']): ...
  |              ^^^^^^^^^^^^^^^^^^^^^^^
help: Remove quotes
  |
2 |
  - def f(a: Foo['SingleLine  # Comment']): ...
3 + def f(a: Foo[(SingleLine  # Comment
4 + )]): ...
5 |
  |

UP037 [*] Remove quotes from type annotation
 --> UP037_2.pyi:6:14
  |
6 |   def f(a: Foo['''Bar[
  |  ______________^
7 | |     Multi |
8 | |     Line]''']): ...
  | |____________^
help: Remove quotes
  |
5 |
  - def f(a: Foo['''Bar[
6 + def f(a: Foo[Bar[
7 |     Multi |
  -     Line]''']): ...
8 +     Line]]): ...
9 |
  |

UP037 [*] Remove quotes from type annotation
  --> UP037_2.pyi:11:14
   |
11 |   def f(a: Foo['''Bar[
   |  ______________^
12 | |     Multi |
13 | |     Line  # Comment
14 | | ]''']): ...
   | |____^
help: Remove quotes
   |
10 |
   - def f(a: Foo['''Bar[
11 + def f(a: Foo[Bar[
12 |     Multi |
13 |     Line  # Comment
   - ]''']): ...
14 + ]]): ...
15 |
   |

UP037 [*] Remove quotes from type annotation
  --> UP037_2.pyi:17:14
   |
17 |   def f(a: Foo['''Bar[
   |  ______________^
18 | |     Multi |
19 | |     Line]  # Comment''']): ...
   | |_______________________^
help: Remove quotes
   |
16 |
   - def f(a: Foo['''Bar[
17 + def f(a: Foo[(Bar[
18 |     Multi |
   -     Line]  # Comment''']): ...
19 +     Line]  # Comment
20 + )]): ...
21 |
   |

UP037 [*] Remove quotes from type annotation
  --> UP037_2.pyi:22:14
   |
22 |   def f(a: Foo['''
   |  ______________^
23 | | Bar[
24 | |     Multi |
25 | |     Line]  # Comment''']): ...
   | |_______________________^
help: Remove quotes
   |
21 |
   - def f(a: Foo['''
22 + def f(a: Foo[(
23 | Bar[
24 |     Multi |
   -     Line]  # Comment''']): ...
25 +     Line]  # Comment
26 + )]): ...
27 |
   |

UP037 [*] Remove quotes from type annotation
  --> UP037_2.pyi:28:10
   |
28 |   def f(a: '''list[int]
   |  __________^
29 | |     ''' = []): ...
   | |_______^
help: Remove quotes
   |
27 |
   - def f(a: '''list[int]
   - 	''' = []): ...
28 + def f(a: list[int]
29 + 	 = []): ...
30 |
   |

UP037 [*] Remove quotes from type annotation
  --> UP037_2.pyi:32:4
   |
32 |   a: '''\\
   |  ____^
33 | | list[int]''' = [42]
   | |____________^
help: Remove quotes
   |
31 |
   - a: '''\\
   - list[int]''' = [42]
32 + a: (\
33 + list[int]) = [42]
34 |
   |

UP037 [*] Remove quotes from type annotation
  --> UP037_2.pyi:36:10
   |
36 |   def f(a: '''
   |  __________^
37 | |     list[int]
38 | |     ''' = []): ...
   | |_______^
help: Remove quotes
   |
35 |
   - def f(a: '''
36 + def f(a: 
37 | 	list[int]
   - 	''' = []): ...
38 + 	 = []): ...
39 |
   |

UP037 [*] Remove quotes from type annotation
  --> UP037_2.pyi:41:14
   |
41 |   def f(a: Foo['''
   |  ______________^
42 | |     Bar
43 | |     [
44 | |     Multi |
45 | |     Line
46 | |     ]  # Comment''']): ...
   | |___________________^
help: Remove quotes
   |
40 |
   - def f(a: Foo['''
41 + def f(a: Foo[(
42 |     Bar
43 |     [
44 |     Multi |
45 |     Line
   -     ]  # Comment''']): ...
46 +     ]  # Comment
47 + )]): ...
48 |
   |

UP037 [*] Remove quotes from type annotation
  --> UP037_2.pyi:49:4
   |
49 |   a: '''list
   |  ____^
50 | | [int]''' = [42]
   | |________^
help: Remove quotes
   |
48 |
   - a: '''list
   - [int]''' = [42]
49 + a: (list
50 + [int]) = [42]
   |
