crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__context_manager_generator_py37.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP052 Use `Generator` instead of `Iterator` for a context manager
 --> UP052_version.py:7:18
  |
6 | @contextmanager
7 | def context() -> Iterator[int]:
  |                  ^^^^^^^^^^^^^
8 |     yield 1
  |
help: Replace with `Generator`
